namespace MuNaiYiPattern.Decorator.Classic
{
    public interface IDecorator:IText
    {
    }
}
