namespace MuNaiYiPattern.Decorator.Classic
{
    public interface IText
    {
        string Content { get; }
    }
}
